--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"canvas": "^2.11.2",
+		"konva": "^9.2.0",
+		"svelte-konva": "^0.2.0"
+	}
 }
