--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"appwrite": "^11.0.0",
 		"canvas": "^2.11.2",
 		"konva": "^9.2.0",
 		"svelte-konva": "^0.2.0"
