--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@floating-ui/dom": "^1.2.9",
 		"@skeletonlabs/skeleton": "^1.7.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
@@ -40,6 +41,7 @@
 		"appwrite": "^11.0.0",
 		"canvas": "^2.11.2",
 		"konva": "^9.2.0",
+		"node-appwrite": "^9.0.0",
 		"svelte-konva": "^0.2.0"
 	}
 }
